# image-processing

./: .gitignore  README.md  pyproject.toml
notebooks/: main_pipeline.ipynb
results/metrics/: features.csv
src/: cnn.py  descriptors.py  edges.py  features.py  frequency.py  morphology.py  preprocessing.py
