[project]
name = "image-processing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "kaggle>=2.2.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-python-headless>=4.13.0.92",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
]
